--- a/style/index.css
+++ b/style/index.css
@@ -10,6 +10,9 @@
   padding: 30px 0;
   border-bottom: 2px solid black;
 }
+.indexMain__items > div:nth-last-child(1){
+    margin-bottom: 0;
+}
 .indexMain__items > div:nth-child(even) {
   flex-direction: row-reverse;
 }
