--- a/style/style.css
+++ b/style/style.css
@@ -9,7 +9,7 @@ a {
 body {
   background: rgb(54, 55, 55);
 }
-/* TODO header */
+/* | header */
 header {
   height: 100px;
   background: rgb(120, 208, 114);
@@ -28,8 +28,8 @@ header {
   padding: 20px;
   transition: 0.3s;
 }
-.nav__links > li > a:hover{
-    color: #fff;
+.nav__links > li > a:hover {
+  color: #fff;
 }
 /* ! nav */
 /* TODO main */
@@ -86,4 +86,37 @@ main {
 
 /* TODO footer */
 footer {
+  height: 400px;
+  background: rgb(104, 104, 104);
+  position: relative;
+}
+footer > h3 {
+  position: absolute;
+  left: 20%;
+  top:120px
+}
+.footer__links {
+  position: absolute;
+  /* padding-top: 30px; */
+  top:150px;
+  left: 20%;
+  display: flex;
+  flex-direction: column;
+  list-style-type: none;
+  justify-content: space-evenly;
+  align-items: center;
+ 
+}
+.footer__links>li{
+   margin: 10px;
+}
+
+.footer__links > li > a {
+  color: black;
+  font-size: 25px;
+  padding: 20px;
+  transition: 0.3s;
+}
+.footer__links > li > a:hover{
+  color: #fff;
 }
