--- a/style/o-nas.css
+++ b/style/o-nas.css
@@ -1,20 +1,45 @@
-main{
-  /* padding: 20px; */
-  margin: 0 auto ;
-}
-#movies {
-  width:90vw;
+.slider {
+  position: relative;
+  width: 40vw;
+  height: 60vh;
   margin: 30px auto;
-  display: grid;
-   grid-template-columns: repeat(3, minmax(250px, 1fr));
-  gap:20px;
   overflow: hidden;
+  border-radius: 10px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
 }
-#movies > div {
-  border: 1px solid black;
-  text-align: center;
+
+.slides {
+  display: flex;
+  transition: transform 0.7s ease;
 }
-#movies > div > img{
+
+.slide {
+  min-width: 100%;
+}
+
+.slide img {
   width: 100%;
-  /* object-fit: cover; */
+  height: 60vh;
+}
+
+button.prev,
+button.next {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+  border: none;
+  font-size: 30px;
+  padding: 10px;
+  cursor: pointer;
+  z-index: 10;
+  border-radius: 30%;
+}
+
+button.prev {
+  left: 10px;
+}
+button.next {
+  right: 10px;
 }
