--- a/style/style.css
+++ b/style/style.css
@@ -9,12 +9,15 @@ a {
 body {
   background: rgb(54, 55, 55);
 }
+
 /* | header */
 header {
   height: 100px;
   background: rgb(120, 208, 114);
 }
 .nav__links {
+  position: relative;
+  z-index: 2;
   padding-top: 30px;
   display: flex;
   flex-direction: row;
@@ -23,32 +26,31 @@ header {
   align-items: center;
 }
 .nav__links > li > a {
-  color: black;
+  color: #fff;
   font-size: 25px;
   padding: 20px;
   transition: 0.3s;
 }
 .nav__links > li > a:hover {
-  color: #fff;
+  color: #bfbfbf;
 }
 /* ! nav */
-/* TODO main */
+/* | main */
 main {
   background: gray;
   overflow: hidden;
 }
 .parallax-box {
   width: 100vw;
-  height: 800px;
+  height: 100vh;
   position: relative;
   overflow: hidden;
-  background-image: url("https://picsum.photos/id/1018/600/400");
+  background-image: url("https://images.pexels.com/photos/1749303/pexels-photo-1749303.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2");
   background-size: 110vw 900px;
   background-position: center;
   transition: background-position 0.2s ease;
   cursor: pointer;
   background-repeat: no-repeat;
-  margin-bottom: 30px;
 }
 
 .parallax-content {
@@ -64,9 +66,12 @@ main {
   text-align: center;
   flex-direction: column;
 }
+.parallax-content > h1 {
+  font-size: 34px;
+}
 .parallax-content > p {
-  width: 30vw;
-  font-size: 16px;
+  width: 45vw;
+  font-size: 24px;
   padding: 30px;
 }
 .parallax-overlay {
@@ -75,16 +80,15 @@ main {
   left: 0;
   right: 0;
   bottom: 0;
-  /* background-image: url('https://www.transparenttextures.com/patterns/dark-mosaic.png'); */
-  background: rgba(0, 255, 255, 0.574);
+  background: rgba(50, 23, 0, 0.574);
   background-size: 150%;
   background-position: center;
-  pointer-events: none; /* Allow mouse events to pass through */
+  pointer-events: none;
   z-index: 0;
   transition: background-position 0.1s ease;
 }
 
-/* TODO footer */
+/* | footer */
 footer {
   height: 400px;
   background: rgb(104, 104, 104);
@@ -93,22 +97,20 @@ footer {
 footer > h3 {
   position: absolute;
   left: 20%;
-  top:120px
+  top: 120px;
 }
 .footer__links {
   position: absolute;
-  /* padding-top: 30px; */
-  top:150px;
+  top: 150px;
   left: 20%;
   display: flex;
   flex-direction: column;
   list-style-type: none;
   justify-content: space-evenly;
   align-items: center;
- 
 }
-.footer__links>li{
-   margin: 10px;
+.footer__links > li {
+  margin: 10px;
 }
 
 .footer__links > li > a {
@@ -117,6 +119,6 @@ footer > h3 {
   padding: 20px;
   transition: 0.3s;
 }
-.footer__links > li > a:hover{
+.footer__links > li > a:hover {
   color: #fff;
 }
