--- a/style/films.css
+++ b/style/films.css
@@ -1,27 +1,49 @@
-main{
-  margin: 0 auto ;
+main {
+  margin: 0 auto;
 }
 #movies {
-  width:90vw;
+  width: 90vw;
   margin: 30px auto;
   display: grid;
-   grid-template-columns: repeat(3, minmax(250px, 1fr));
-  gap:20px;
+  grid-template-columns: repeat(4, minmax(250px, 1fr));
+  gap: 20px;
   overflow: hidden;
 }
 #movies > div {
   border: 1px solid black;
   text-align: center;
 }
-#movies > div > img{
+#movies > div > img {
   width: 100%;
-  /* object-fit: cover; */
 }
-#loadMoreBtn{
+#loadMoreBtn {
   padding: 20px;
   font-size: 30px;
   border-radius: 8px;
-  margin: 0 auto;
+  margin: 0 auto 30px;
   display: flex;
   justify-content: center;
+  background: rgb(184, 172, 172);
+}
+
+.main__searcher {
+  width: 90vw;
+  margin: 0 auto;
+  background: rgb(111, 111, 111);
+  padding: 20px 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.main__searcher > label {
+  font-size: 30px;
+  padding: 20px;
+}
+.main__searcher > input {
+  width: 80%;
+  font-size: 24px;
+  padding: 10px;
+}
+.hide {
+  display: none;
 }
