--- a/style/style.css
+++ b/style/style.css
@@ -13,7 +13,7 @@ body {
 /* | header */
 header {
   height: 100px;
-  background: rgb(120, 208, 114);
+  background: rgba(50, 23, 0, 1);
 }
 .nav__links {
   position: relative;
@@ -49,7 +49,6 @@ main {
   background-size: 110vw 900px;
   background-position: center;
   transition: background-position 0.2s ease;
-  cursor: pointer;
   background-repeat: no-repeat;
 }
 
