--- a/style/style.css
+++ b/style/style.css
@@ -34,6 +34,70 @@ header {
 .nav__links > li > a:hover {
   color: #bfbfbf;
 }
+/* todo Burger menu */
+.open {
+  display: flex !important;
+}
+
+.burgerB {
+  display: none;
+  position: relative;
+  z-index: 50;
+  align-items: center;
+  justify-content: flex-end;
+  width: 30px;
+  height: 18px;
+}
+
+.burgerB span {
+  height: 2px;
+  width: 80%;
+  transform: scale(1);
+  background-color: #faf6f2;
+}
+
+.burgerB::before,
+.burgerB::after {
+  content: "";
+  position: absolute;
+  height: 2px;
+  width: 100%;
+  background-color: #faf6f2;
+  transition: all 0.3s ease 0s;
+}
+
+.burgerB::before {
+  top: 0;
+}
+
+.burgerB::after {
+  bottom: 0;
+}
+
+.burgerB.active span {
+  transform: scale(0);
+}
+
+.burgerB.active::before {
+  top: 50%;
+  transform: rotate(-45deg) translate(0, -50%);
+}
+
+.burgerB.active::after {
+  bottom: 50%;
+  transform: rotate(45deg) translate(0, 50%);
+}
+.open {
+  display: flex !important;
+}
+@keyframes burgerAnimation {
+  from {
+    top: -100%;
+  }
+  to {
+    top: 0;
+  }
+}
 /* ! nav */
 /* | main */
 main {
@@ -46,6 +110,7 @@ main {
   position: relative;
   overflow: hidden;
   background-image: url("https://images.pexels.com/photos/1749303/pexels-photo-1749303.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2");
+  /* ? background-size */
   background-size: 110vw 900px;
   background-position: center;
   transition: background-position 0.2s ease;
@@ -120,4 +185,59 @@ footer > h3 {
 }
 .footer__links > li > a:hover {
   color: #fff;
+}
+
+@media only screen and (max-width: 992px) {
+}
+@media only screen and (max-width: 600px) {
+}
+@media only screen and (max-width: 480px) {
+  body.lock {
+    overflow: hidden;
+  }
+
+  /* 
+  | nav
+  ? Burger 
+  */
+  .nav__links {
+    position: fixed;
+    top: 0;
+    right: 0;
+    height: 100vh;
+    width: 100vw;
+    flex-direction: column;
+    background-color: rgba(50, 23, 0, 0.901);
+    justify-content: space-evenly;
+    align-items: center;
+    list-style: none;
+    overflow-y: auto;
+    transition: opacity 0.4s ease, transform 0.4s ease;
+
+    pointer-events: none;
+    transform: translateY(-100%);
+    z-index: 50;
+  }
+
+  .nav__links.open {
+    pointer-events: auto;
+    transform: translateY(0);
+  }
+  .burgerB {
+    display: flex;
+    position: absolute;
+    top: 50px;
+    transform: translateY(-50%);
+
+    right: 2%;
+  }
+  /* todo Main */
+  .parallax-content > h1 {
+  font-size: 28px;
+}
+.parallax-content > p {
+  width: 80vw;
+  font-size: 18px;
+  padding: 30px;
+}
 }
