--- a/style/films.css
+++ b/style/films.css
@@ -1,7 +1,7 @@
 main {
   margin: 0 auto;
   overflow: visible !important;
-  position: relative; 
+  position: relative;
 }
 #movies {
   width: 90vw;
@@ -10,7 +10,6 @@ main {
   grid-template-columns: repeat(4, minmax(250px, 1fr));
   gap: 20px;
   /* overflow: hidden; */
-  
 }
 #movies > div {
   border: 1px solid black;
@@ -20,8 +19,8 @@ main {
 #movies > div > img {
   width: 100%;
 }
-#movies .title{
-padding: 10px;
+#movies .title {
+  padding: 10px;
 }
 
 #loadMoreBtn {
@@ -36,66 +35,74 @@ padding: 10px;
 
 .main__searcher {
   position: sticky;
-  top:-80px;
+  top: -50px;
   width: 90vw;
   margin: 0 auto;
-  background: rgb(111, 111, 111);
-  padding: 20px 0;
+  background: rgba(111, 111, 111, 0.496);
+  padding-bottom: 5px;
   display: flex;
-  align-items: center;
+  flex-direction: column;
   justify-content: center;
 }
 .main__searcher > label {
   font-size: 30px;
-  padding: 20px;
+  padding: 10px;
+  margin: 0 auto;
 }
 .main__searcher > input {
   width: 80%;
   font-size: 24px;
-  padding: 10px;
+  padding: 5px;
+  margin: 0 auto;
 }
 .hide {
   display: none;
-}@media only screen and (max-width: 992px) {
-  #movies {
-  width: 90vw;
-  margin: 30px auto;
-  display: grid;
-  grid-template-columns: repeat(2, minmax(250px, 1fr));
-  gap: 20px;
-  /* overflow: hidden; */
-  
 }
+@media only screen and (max-width: 1200px){
+  #movies {
+    width: 90vw;
+    margin: 30px auto;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    /* overflow: hidden; */
+  }
+}
+@media only screen and (max-width: 992px) {
+  #movies {
+    width: 90vw;
+    margin: 30px auto;
+    display: grid;
+    grid-template-columns: repeat(2, minmax(250px, 1fr));
+    gap: 20px;
+    /* overflow: hidden; */
+  }
 }
 @media only screen and (max-width: 600px) {
   #movies {
-  width: 90vw;
-  margin: 30px auto;
-  display: grid;
-  grid-template-columns: repeat(1, minmax(250px, 1fr));
-  gap: 20px;
-  /* overflow: hidden; */
-  
+    width: 90vw;
+    margin: 30px auto;
+    display: grid;
+    grid-template-columns: repeat(1, minmax(250px, 1fr));
+    gap: 20px;
+    /* overflow: hidden; */
+  }
 }
-}
-@media only screen and (max-width: 480px){
+@media only screen and (max-width: 480px) {
   #movies {
-  width: 90vw;
-  margin: 30px auto;
-  display: grid;
-  grid-template-columns: repeat(1, minmax(250px, 1fr));
-  gap: 20px;
-  overflow: hidden;
-}
-#movies .title>p {
-  font-size:14px ;
-}
-/* todo search bar */
-.main__searcher {
-  width: 100vw;
-  background: rgb(111, 111, 111);
-  padding: 20px 0;
-  display: flex;
-  flex-direction: column;
-}
+    width: 90vw;
+    margin: 30px auto;
+    display: grid;
+    grid-template-columns: repeat(1, minmax(250px, 1fr));
+    gap: 20px;
+    overflow: hidden;
+  }
+  #movies .title > p {
+    font-size: 14px;
+  }
+  /* | search bar */
+  .main__searcher {
+    width: 100vw;
+    top: -40px;
+  }
 }
