--- a/style/o-nas.css
+++ b/style/o-nas.css
@@ -62,3 +62,32 @@ button.next {
 }
 
 
+@media only screen and (max-width: 996px){
+  
+.slider {
+  position: relative;
+  width: 60vw;
+  height: 50vh;
+  margin: 30px auto;
+  overflow: hidden;
+  border-radius: 10px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+}
+}
+@media only screen and (max-width: 600px){
+  .main__aboutUs > h2 {
+  margin-bottom: 10px;
+}
+.main__aboutUs > p {
+  font-size: 18px;
+}
+.slider {
+  position: relative;
+  width: 80vw;
+  height: 50vh;
+  margin: 30px auto;
+  overflow: hidden;
+  border-radius: 10px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+}
+}
