swiper test commit

--- a/style/contact.css
+++ b/style/contact.css
@@ -18,7 +18,8 @@
   font-size: 28px;
   margin-bottom: 20px;
   font-weight: bold;
-  color: #f4f4f4;
+  color: rgb(244, 244, 244);
+  color: rgb(140, 0, 0);
   text-align: center;
 }
 
